# GTS_Logistics_Platform

./: ## Chat Customization Diagnostics.md  .arabic-lintignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .renderignore  .tmp_polish_docs.py  00_READ_ME_FIRST.md  AI_BATCH_EXTRACTION_GUIDE.md  AI_BATCH_EXTRACTION_GUIDE_AR.md  AI_BATCH_EXTRACTION_UPDATE.md  AI_BOTS_PANEL_COMPLETION_CHECKLIST.md  AI_BOTS_PANEL_DEPLOYMENT_SUMMARY.md  AI_BOTS_PANEL_IMPLEMENTATION.md  AI_BOTS_PANEL_INDEX.md  AI_BOTS_PANEL_LAUNCH_SUMMARY.md  AI_BOTS_PANEL_QUICK_REFERENCE.md  AI_BOTS_PANEL_VISUAL_GUIDE.md  AI_BOTS_SUBSCRIPTION_QUICK_START.md  AI_BOTS_SUBSCRIPTION_SYSTEM.md  AI_BOT_ISSUES_FIX_README.md  AI_INVOICE_EXTRACTION_IMPLEMENTATION.md  AI_INVOICE_EXTRACTION_QUICK_START.md  AI_ORCHESTRATION_SYSTEM_README.md  API_CONNECTIONS_DEPLOYMENT_COMPLETE.md  API_CONNECTIONS_DEPLOYMENT_STATUS.md  API_CONNECTIONS_DOCUMENTATION_INDEX.md  API_CONNECTIONS_IMPLEMENTATION_SUMMARY.md  API_CONNECTIONS_MANAGER_DOCUMENTATION.md  API_CONNECTIONS_QUICK_START.md  API_CONNECTION_FILES_GUIDE.md  API_CONNECTION_FILES_GUIDE_AR.md  API_KEYS_SETUP_GUIDE.md  API_REFERENCE_COMPLETE.md  ARCHITECTURE_OVERVIEW.md  AUDIT_PORTAL_FIX_README.md  AUTHENTICATION_FIX_COMPLETE.md  AUTH_FIX_ARABIC_GUIDE.md  (+569 more)
.github/: copilot-instructions.md
.husky/: pre-commit  pre-push
TheVIZION/vizion_eye/: __init__.py  autorun.py  cli.py  db.py  pyproject.toml  tui.py  vizion_eye.db-shm  vizion_eye.db-wal
_archive/: 00_START_HERE_NOW.md  ACTIVATION_GUIDE.md  AI_BATCH_EXTRACTION_GUIDE_AR.md  FILE_INDEX.md  (+42 more)
(+2000 files in other folders)
